[tool.poetry]
name = "iml-project"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.1.4"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
